module/parser/make-parser/dst/MakeParser.java
// Generated from https://github.com/njcom/parser/make-parser/blob/main/src/MakeParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MakeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VAR_REF_WORD=1, VAR_REF_RPAREN=2, VAR_REF_RBRACE=3, COMMENT=4, ASSIGN=5, 
		DOLLAR=6, LPAREN=7, RPAREN=8, ESC=9, SQUOTE=10, DQUOTE=11, COMMA=12, CONTINUATION=13, 
		EOL=14, TARGET=15, IFDEF=16, IFNDEF=17, IFEQ=18, IFNEQ=19, ELSE=20, ENDIF=21, 
		EXPORT=22, UNEXPORT=23, VPATH=24, INCLUDE=25, MINCLUDE=26, SINCLUDE=27, 
		LOAD=28, MLOAD=29, DEFINE=30, UNDEFINE=31, OVERRIDE=32, PRIVATE=33, WORD=34, 
		WS=35, VAR_REF_CONTINUATION=36, VAR_REF_WS=37, VAR_REF_LPAREN=38, VAR_REF_LBRACE=39, 
		VAR_REF_TEXT=40, VAR_REF_DOLLAR=41, PREREQUISITE_CONTINUATION=42, PREREQUISITE=43, 
		PREREQUISITE_WS=44, PREREQUISITE_EOL=45, SHELL_CMD=46, RECEIPT_CONTINUATION=47, 
		RECEIPT_EOL=48;
	public static final int
		RULE_program = 0, RULE_stmts = 1, RULE_stmt = 2, RULE_varDef = 3, RULE_varRef = 4, 
		RULE_varRefText = 5, RULE_directiveCall = 6, RULE_conditionalDirectiveCall = 7, 
		RULE_ifCondition = 8, RULE_otherDirectiveCall = 9, RULE_ifDefCondition = 10, 
		RULE_ifNdefCondition = 11, RULE_ifEqCondition = 12, RULE_quotedVarRef = 13, 
		RULE_squotedVarRef = 14, RULE_dquotedVarRef = 15, RULE_ifNeqCondition = 16, 
		RULE_elseClause = 17, RULE_varName = 18, RULE_exportDirectiveCall = 19, 
		RULE_unexportDirectiveCall = 20, RULE_vpathDirectiveCall = 21, RULE_includeDirectiveCall = 22, 
		RULE_mincludeDirectiveCall = 23, RULE_sincludeDirectiveCall = 24, RULE_loadDirectiveCall = 25, 
		RULE_mloadDirectiveCall = 26, RULE_defineDirectiveCall = 27, RULE_undefineDirectiveCall = 28, 
		RULE_overrideDirectiveCall = 29, RULE_privateDirectiveCall = 30, RULE_ruleDef = 31, 
		RULE_prerequisite = 32, RULE_targetRef = 33, RULE_shellCmd = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stmts", "stmt", "varDef", "varRef", "varRefText", "directiveCall", 
			"conditionalDirectiveCall", "ifCondition", "otherDirectiveCall", "ifDefCondition", 
			"ifNdefCondition", "ifEqCondition", "quotedVarRef", "squotedVarRef", 
			"dquotedVarRef", "ifNeqCondition", "elseClause", "varName", "exportDirectiveCall", 
			"unexportDirectiveCall", "vpathDirectiveCall", "includeDirectiveCall", 
			"mincludeDirectiveCall", "sincludeDirectiveCall", "loadDirectiveCall", 
			"mloadDirectiveCall", "defineDirectiveCall", "undefineDirectiveCall", 
			"overrideDirectiveCall", "privateDirectiveCall", "ruleDef", "prerequisite", 
			"targetRef", "shellCmd"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'}'", null, null, null, null, null, "'\\'", "'''", 
			"'\"'", "','", null, null, null, "'ifdef'", "'ifndef'", "'ifeq'", "'ifneq'", 
			"'else'", "'endif'", "'export'", "'unexport'", "'vpath'", "'include'", 
			"'-include'", "'sinclude'", "'load'", "'-load'", "'define'", "'undefine'", 
			"'override'", "'private'", null, null, null, null, null, "'{'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VAR_REF_WORD", "VAR_REF_RPAREN", "VAR_REF_RBRACE", "COMMENT", 
			"ASSIGN", "DOLLAR", "LPAREN", "RPAREN", "ESC", "SQUOTE", "DQUOTE", "COMMA", 
			"CONTINUATION", "EOL", "TARGET", "IFDEF", "IFNDEF", "IFEQ", "IFNEQ", 
			"ELSE", "ENDIF", "EXPORT", "UNEXPORT", "VPATH", "INCLUDE", "MINCLUDE", 
			"SINCLUDE", "LOAD", "MLOAD", "DEFINE", "UNDEFINE", "OVERRIDE", "PRIVATE", 
			"WORD", "WS", "VAR_REF_CONTINUATION", "VAR_REF_WS", "VAR_REF_LPAREN", 
			"VAR_REF_LBRACE", "VAR_REF_TEXT", "VAR_REF_DOLLAR", "PREREQUISITE_CONTINUATION", 
			"PREREQUISITE", "PREREQUISITE_WS", "PREREQUISITE_EOL", "SHELL_CMD", "RECEIPT_CONTINUATION", 
			"RECEIPT_EOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MakeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MakeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MakeParser.EOF, 0); }
		public List<StmtsContext> stmts() {
			return getRuleContexts(StmtsContext.class);
		}
		public StmtsContext stmts(int i) {
			return getRuleContext(StmtsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EOL) | (1L << TARGET) | (1L << IFDEF) | (1L << IFNDEF) | (1L << IFEQ) | (1L << IFNEQ) | (1L << EXPORT) | (1L << UNEXPORT) | (1L << VPATH) | (1L << INCLUDE) | (1L << MINCLUDE) | (1L << SINCLUDE) | (1L << LOAD) | (1L << MLOAD) | (1L << DEFINE) | (1L << UNDEFINE) | (1L << OVERRIDE) | (1L << PRIVATE) | (1L << WORD) | (1L << VAR_REF_LPAREN) | (1L << VAR_REF_LBRACE))) != 0)) {
				{
				{
				setState(70);
				stmts();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(MakeParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(MakeParser.EOL, i);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitStmts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitStmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmts);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(78);
				match(EOL);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			stmt();
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(85);
						match(EOL);
						}
						}
						setState(88); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==EOL );
					setState(90);
					stmt();
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(96);
					match(EOL);
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public VarDefContext varDef() {
			return getRuleContext(VarDefContext.class,0);
		}
		public VarRefContext varRef() {
			return getRuleContext(VarRefContext.class,0);
		}
		public DirectiveCallContext directiveCall() {
			return getRuleContext(DirectiveCallContext.class,0);
		}
		public RuleDefContext ruleDef() {
			return getRuleContext(RuleDefContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				{
				setState(102);
				varDef();
				}
				break;
			case VAR_REF_LPAREN:
			case VAR_REF_LBRACE:
				{
				setState(103);
				varRef();
				}
				break;
			case IFDEF:
			case IFNDEF:
			case IFEQ:
			case IFNEQ:
			case EXPORT:
			case UNEXPORT:
			case VPATH:
			case INCLUDE:
			case MINCLUDE:
			case SINCLUDE:
			case LOAD:
			case MLOAD:
			case DEFINE:
			case UNDEFINE:
			case OVERRIDE:
			case PRIVATE:
				{
				setState(104);
				directiveCall();
				}
				break;
			case TARGET:
				{
				setState(105);
				ruleDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(MakeParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(MakeParser.WORD, i);
		}
		public TerminalNode ASSIGN() { return getToken(MakeParser.ASSIGN, 0); }
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitVarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(WORD);
			setState(109);
			match(ASSIGN);
			setState(111); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(110);
					match(WORD);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(113); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarRefContext extends ParserRuleContext {
		public TerminalNode VAR_REF_LPAREN() { return getToken(MakeParser.VAR_REF_LPAREN, 0); }
		public VarRefTextContext varRefText() {
			return getRuleContext(VarRefTextContext.class,0);
		}
		public TerminalNode VAR_REF_RPAREN() { return getToken(MakeParser.VAR_REF_RPAREN, 0); }
		public TerminalNode VAR_REF_LBRACE() { return getToken(MakeParser.VAR_REF_LBRACE, 0); }
		public TerminalNode VAR_REF_RBRACE() { return getToken(MakeParser.VAR_REF_RBRACE, 0); }
		public VarRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterVarRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitVarRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitVarRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarRefContext varRef() throws RecognitionException {
		VarRefContext _localctx = new VarRefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varRef);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR_REF_LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(115);
				match(VAR_REF_LPAREN);
				setState(116);
				varRefText();
				setState(117);
				match(VAR_REF_RPAREN);
				}
				}
				break;
			case VAR_REF_LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(119);
				match(VAR_REF_LBRACE);
				setState(120);
				varRefText();
				setState(121);
				match(VAR_REF_RBRACE);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarRefTextContext extends ParserRuleContext {
		public List<TerminalNode> VAR_REF_TEXT() { return getTokens(MakeParser.VAR_REF_TEXT); }
		public TerminalNode VAR_REF_TEXT(int i) {
			return getToken(MakeParser.VAR_REF_TEXT, i);
		}
		public List<VarRefContext> varRef() {
			return getRuleContexts(VarRefContext.class);
		}
		public VarRefContext varRef(int i) {
			return getRuleContext(VarRefContext.class,i);
		}
		public VarRefTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varRefText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterVarRefText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitVarRefText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitVarRefText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarRefTextContext varRefText() throws RecognitionException {
		VarRefTextContext _localctx = new VarRefTextContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varRefText);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR_REF_LPAREN) | (1L << VAR_REF_LBRACE) | (1L << VAR_REF_TEXT))) != 0)) {
				{
				setState(127);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR_REF_TEXT:
					{
					setState(125);
					match(VAR_REF_TEXT);
					}
					break;
				case VAR_REF_LPAREN:
				case VAR_REF_LBRACE:
					{
					setState(126);
					varRef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveCallContext extends ParserRuleContext {
		public ConditionalDirectiveCallContext conditionalDirectiveCall() {
			return getRuleContext(ConditionalDirectiveCallContext.class,0);
		}
		public OtherDirectiveCallContext otherDirectiveCall() {
			return getRuleContext(OtherDirectiveCallContext.class,0);
		}
		public DirectiveCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directiveCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterDirectiveCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitDirectiveCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitDirectiveCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveCallContext directiveCall() throws RecognitionException {
		DirectiveCallContext _localctx = new DirectiveCallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_directiveCall);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IFDEF:
			case IFNDEF:
			case IFEQ:
			case IFNEQ:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				conditionalDirectiveCall();
				}
				break;
			case EXPORT:
			case UNEXPORT:
			case VPATH:
			case INCLUDE:
			case MINCLUDE:
			case SINCLUDE:
			case LOAD:
			case MLOAD:
			case DEFINE:
			case UNDEFINE:
			case OVERRIDE:
			case PRIVATE:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				otherDirectiveCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalDirectiveCallContext extends ParserRuleContext {
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public TerminalNode ENDIF() { return getToken(MakeParser.ENDIF, 0); }
		public List<ElseClauseContext> elseClause() {
			return getRuleContexts(ElseClauseContext.class);
		}
		public ElseClauseContext elseClause(int i) {
			return getRuleContext(ElseClauseContext.class,i);
		}
		public ConditionalDirectiveCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalDirectiveCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterConditionalDirectiveCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitConditionalDirectiveCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitConditionalDirectiveCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalDirectiveCallContext conditionalDirectiveCall() throws RecognitionException {
		ConditionalDirectiveCallContext _localctx = new ConditionalDirectiveCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conditionalDirectiveCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			ifCondition();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSE) {
				{
				{
				setState(137);
				elseClause();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfConditionContext extends ParserRuleContext {
		public IfDefConditionContext ifDefCondition() {
			return getRuleContext(IfDefConditionContext.class,0);
		}
		public IfNdefConditionContext ifNdefCondition() {
			return getRuleContext(IfNdefConditionContext.class,0);
		}
		public IfEqConditionContext ifEqCondition() {
			return getRuleContext(IfEqConditionContext.class,0);
		}
		public IfNeqConditionContext ifNeqCondition() {
			return getRuleContext(IfNeqConditionContext.class,0);
		}
		public IfConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterIfCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitIfCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitIfCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfConditionContext ifCondition() throws RecognitionException {
		IfConditionContext _localctx = new IfConditionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifCondition);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IFDEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				ifDefCondition();
				}
				break;
			case IFNDEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				ifNdefCondition();
				}
				break;
			case IFEQ:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				ifEqCondition();
				}
				break;
			case IFNEQ:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				ifNeqCondition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherDirectiveCallContext extends ParserRuleContext {
		public ExportDirectiveCallContext exportDirectiveCall() {
			return getRuleContext(ExportDirectiveCallContext.class,0);
		}
		public UnexportDirectiveCallContext unexportDirectiveCall() {
			return getRuleContext(UnexportDirectiveCallContext.class,0);
		}
		public VpathDirectiveCallContext vpathDirectiveCall() {
			return getRuleContext(VpathDirectiveCallContext.class,0);
		}
		public IncludeDirectiveCallContext includeDirectiveCall() {
			return getRuleContext(IncludeDirectiveCallContext.class,0);
		}
		public MincludeDirectiveCallContext mincludeDirectiveCall() {
			return getRuleContext(MincludeDirectiveCallContext.class,0);
		}
		public SincludeDirectiveCallContext sincludeDirectiveCall() {
			return getRuleContext(SincludeDirectiveCallContext.class,0);
		}
		public LoadDirectiveCallContext loadDirectiveCall() {
			return getRuleContext(LoadDirectiveCallContext.class,0);
		}
		public MloadDirectiveCallContext mloadDirectiveCall() {
			return getRuleContext(MloadDirectiveCallContext.class,0);
		}
		public DefineDirectiveCallContext defineDirectiveCall() {
			return getRuleContext(DefineDirectiveCallContext.class,0);
		}
		public UndefineDirectiveCallContext undefineDirectiveCall() {
			return getRuleContext(UndefineDirectiveCallContext.class,0);
		}
		public OverrideDirectiveCallContext overrideDirectiveCall() {
			return getRuleContext(OverrideDirectiveCallContext.class,0);
		}
		public PrivateDirectiveCallContext privateDirectiveCall() {
			return getRuleContext(PrivateDirectiveCallContext.class,0);
		}
		public OtherDirectiveCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherDirectiveCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).enterOtherDirectiveCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MakeParserListener ) ((MakeParserListener)listener).exitOtherDirectiveCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MakeParserVisitor ) return ((MakeParserVisitor<? extends T>)visitor).visitOtherDirectiveCall(this);
			else return visitor.visitChildren(this);
		}
	}
